# esek

./: README.md  __init__.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
BackUpFunctions/: CMH_test.ipynb  Choric and Serial Correlations.ipynb  DistanceCorrelationPython.ipynb  Interval_Ratio_Old.ipynb  Multilevel_Contingency_Table_Nominal.ipynb  RankBiserialCorrelationBackup.ipynb  Utills_Complete.ipynb  WilsonsE.ipynb
ESEK_Functions/BackUpFunctions/: Choric and Serial Correlations.ipynb  Columns_to_ContingencyTable.ipynb  Ginni'sGamma.ipynb  KendallTau.ipynb  Ouliers Removel Correlations (Skipped Correlations).ipynb  Scott's Phi.ipynb  Spearman Foot Rule.ipynb  Utills_Complete.ipynb
ESEK_Functions/CI_Constructor/: CI_Constructor.py
ESEK_Functions/CI_Constructor/2_MeasuresOfAssociationsAndCorrelationsCI/: Associations_and_Correlations.py
ESEK_Functions/CI_Constructor/3_EtaSquareFamily/: CI_Constructor_Test.ipynb
github/workflows/: publish.yml
src/esek/: results.py
src/esek/Calculator/: __init__.py
src/stats/: utility.py
stats/CI_Constructor/: CI_Constructor_Test.ipynb
tests/: test_one_sample_z.py
tests/notebooks/: Multi_Dep_Medians_Test.ipynb  NonparametricWilcoxnSignRankTest.ipynb  OneSampleZ_test.ipynb  One_Sample_Median_Test.ipynb  One_Sample_t_test_Testings.ipynb  Paired_Control_Pre_Post_Testing.ipynb  Paired_Samples_Z_Test_Testings.ipynb  Robust_Effect_Size_Paired_Testing.ipynb  Two_Ind_Samples_t-test-Testings.ipynb
tests/unit/: OneSampleZ_test.py  OneSampleZ_tests.py
(+167 files in other folders)
